--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,10 +9,23 @@
   font-size: 14px;
 }
 
+.logo {
+  position: relative;
+  padding-bottom: 2rem;
+  width: 100%;
+  height: 100%;
+  max-height: 130px;
+}
+
 .menu_group_heading {
   margin: 0;
-  padding-bottom: 1em;
+  padding-bottom: 0.5rem;
   border-bottom: 2px solid #ccc;
+  color: #656565;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 2rem;
+  text-align: center;
+  /* letter-spacing: 0.1rem; */
 }
 
 .menu_group {
@@ -24,15 +37,39 @@
 
 .menu_item {
   display: flex;
+  position: relative;
+}
+
+.top_section {
+  position: relative;
+  margin-right: 1.5em;
 }
 
 .menu_item_image {
+  position: relative;
   width: 160px;
   max-height: 90px;
   flex-shrink: 0;
   object-fit: cover;
-  margin-right: 1.5em;
   border-radius: 5px;
+}
+
+.vegan {
+  position: absolute;
+  bottom: 0px;
+  right: auto;
+
+  left: calc(100% + 1.5rem);
+  padding: 0.3rem 0.7rem;
+  background-color: #009736;
+  border-radius: 0px 8px 0px 8px;
+}
+
+.order_nummber {
+  position: absolute;
+  /* top: 6px; */
+  right: 0rem;
+  bottom: 0rem;
 }
 
 .menu_item_text {
@@ -52,6 +89,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 0;
+
 }
 
 .menu_item_name {
@@ -127,14 +165,27 @@
     box-shadow: #eee 0px 11px 10px;
   }
 
+  .top_section {
+    margin-right: 0px;
+  }
+
   .menu_item_image {
     width: 100%;
     max-height: 200px;
     flex-shrink: 0;
     object-fit: cover;
     margin-bottom: 1em;
-    margin-right: 0px;
     border-radius: 15px 15px 0px 0px;
+  }
+
+  .order_nummber {
+    position: absolute;
+    top: 0px;
+    left: 1rem;
+  }
+
+  .menu_item_heading {
+    margin-bottom: 1rem;
   }
 
   .menu_item_text {
@@ -147,6 +198,12 @@
     text-align: center;
   }
 
+  .vegan {
+    margin-bottom: 1rem;
+    left: auto;
+    right: 0px;
+    border-radius: 8px 0px 0px 0px;
+  }
 }
 
 /* Tablet and Smaller Desktop */
