--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,18 +1,32 @@
 .container {
   max-width: 1200px;
+  padding-top: 1.5rem;
   margin: 0 auto;
-  padding: 1.5em;
 }
 
 .menu {
   font-family: "Inter", sans-serif;
   font-size: 14px;
+  margin: 0 auto;
+  padding: 1.5em;
+}
+
+.hero {
+  position: relative;
+  height: 100vh;
+  object-fit: contain;
+
+  display: block;
+  top: auto;
+  left: auto;
+  width: 100%;
+  margin-bottom: 3rem;
 }
 
 .logo {
   position: relative;
-  padding-bottom: 2rem;
-  width: 100%;
+  margin: 0px 1rem 2rem 1rem;
+  width: calc(100% - 3rem);
   height: 100%;
   max-height: 130px;
 }
@@ -21,8 +35,10 @@
   margin: 0;
   padding-bottom: 0.5rem;
   border-bottom: 2px solid #ccc;
-  color: #656565;
-  font-family: 'Times New Roman', Times, serif;
+  color: #2e2e2e;
+  font-family: 'Fondamento', Tahoma, Geneva, Verdana, sans-serif;
+  font-style: italic;
+  font-weight: lighter;
   font-size: 2rem;
   text-align: center;
   /* letter-spacing: 0.1rem; */
@@ -33,6 +49,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 1.85em;
   padding: 1.5em 0;
+
 }
 
 .menu_item {
@@ -149,6 +166,16 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .hero {
+    position: relative;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+    top: auto;
+    left: auto;
+    width: 100%;
+  }
+
   .menu_group {
     display: grid;
     grid-template-columns: 1fr;
