--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,12 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+body {
+  padding: 0px;
+  margin: 0px;
+  background: #f6f6f6;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
