--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -140,6 +140,111 @@
   font-weight: lighter;
 }
 
+.footer {
+  text-align: center;
+}
+
+.footer_top {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  text-align: center;
+}
+
+.footer_top_section {
+  flex-direction: column;
+  width: 33.33%;
+  font-size: large;
+  color: #2e2e2e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+.footer_top_section h3 {}
+
+.footer_top_section h3 span {
+  font-weight: lighter;
+}
+
+.footer_top_section a {
+  text-decoration: none;
+  color: #009736;
+  font-size: medium;
+  /* padding-left: 1rem; */
+
+}
+
+.footer_top_section table {
+  text-align: left;
+}
+
+.footer_top_section th {
+  text-align: right;
+}
+
+.footer_top_section td {
+  padding-left: 0.3rem;
+  text-align: center;
+}
+
+.footer_bottom {
+  margin-top: 2rem;
+}
+
+.map {
+  background-image: url('https://maps.googleapis.com/maps/api/staticmap?scale=1&amp;size=1600x900&amp;style=feature:poi.business|visibility:off&amp;style=feature:water|visibility:simplified&amp;style=feature:road|element:labels.icon|visibility:off&amp;style=feature:road.highway|element:labels|saturation:-90|lightness:25&amp;format=jpg&amp;language=en&amp;region=CZ&amp;markers=color:0xddaa44|50.0796000,14.4194968&amp;zoom=16&amp;client=google-presto&amp;signature=7HN9eYNqwR2o_kfuGlDNK8cRJ8g');
+  background-position: center center;
+  background-repeat: no-repeat;
+  /* padding-top: 56%; */
+  width: 100%;
+  height: 150px;
+}
+
+.flag_background {
+  background: darkgreen;
+  /* border: 1px red solid; */
+  height: 90px;
+  width: 100%;
+}
+
+.flag_top {
+  background: black;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+}
+
+.flag_middle {
+  background: white;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+}
+
+.flag_triangle {
+  background: auto;
+  border-top: 45px solid transparent;
+  border-bottom: 45px solid transparent;
+  border-left: 45px solid red;
+  z-index: 2;
+  position: relative;
+  top: -60px;
+  left: 0;
+}
+
+.copyright {
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: smaller;
+  color: #737373;
+
+}
+
 @media screen and (min-width: 992px) {}
 
 /* Enable hover only on non-touch devices */
@@ -230,6 +335,22 @@
     left: auto;
     right: 0px;
     border-radius: 8px 0px 0px 0px;
+  }
+
+  .footer_top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .footer_top_section {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .footer_top_section a {
+    padding: 0px;
   }
 }
 
