--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,24 +69,34 @@
   flex-shrink: 0;
   object-fit: cover;
   border-radius: 5px;
+  min-width: 160px;
 }
 
 .vegan {
   position: absolute;
-  bottom: 0px;
-  right: auto;
-
-  left: calc(100% + 1.5rem);
+  left: 0;
+  top: 90px;
   padding: 0.3rem 0.7rem;
-  background-color: #009736;
-  border-radius: 0px 8px 0px 8px;
+  color: #009736;
+  border-radius: 0px 0px 8px 8px;
+  background: #fff;
+  width: calc(160px - 1.5rem);
+  text-align: center;
 }
 
 .order_nummber {
+  height: 0px;
   position: absolute;
   /* top: 6px; */
   right: 0rem;
   bottom: 0rem;
+}
+
+.order_nummber_under_price {
+  margin: 0px;
+  font-size: smaller;
+  text-align: end;
+  color: #00541e;
 }
 
 .menu_item_text {
@@ -111,12 +121,14 @@
 
 .menu_item_name {
   margin-right: 1.5em;
+  overflow-wrap: anywhere;
 }
 
 .menu_item_name_sub {
   margin-right: 1.5em;
   font-size: smaller;
   font-weight: lighter;
+  overflow-wrap: anywhere;
 }
 
 .menu_item_description {
@@ -154,7 +166,8 @@
 
 .footer_top_section {
   flex-direction: column;
-  width: 33.33%;
+  width: 50%;
+  /* width: 33.33%; */
   font-size: large;
   color: #2e2e2e;
   display: flex;
@@ -175,8 +188,13 @@
   color: #009736;
   font-size: medium;
   /* padding-left: 1rem; */
-
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
+
 
 .footer_top_section table {
   text-align: left;
@@ -245,6 +263,28 @@
 
 }
 
+.langSelector {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  margin: 0 auto;
+  align-items: center;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1000;
+  padding: 1rem;
+  border: none;
+  box-shadow: #eee 0px 0px 40px;
+  /* width: 50%;
+  max-width: 150px; */
+  cursor: pointer;
+  background-color: #fff;
+  /* height: 30px; */
+  /* border-radius: 5px; */
+  border-radius: 50px;
+  /* background-color: #009736; */
+}
+
 @media screen and (min-width: 992px) {}
 
 /* Enable hover only on non-touch devices */
@@ -308,6 +348,7 @@
     object-fit: cover;
     margin-bottom: 1em;
     border-radius: 15px 15px 0px 0px;
+    min-height: 100px;
   }
 
   .order_nummber {
@@ -334,7 +375,11 @@
     margin-bottom: 1rem;
     left: auto;
     right: 0px;
+    top: auto;
+    bottom: 0;
     border-radius: 8px 0px 0px 0px;
+    /* background-color: #009736d6; */
+    width: auto;
   }
 
   .footer_top {
