--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -311,7 +311,7 @@
   margin: 0 auto;
   align-items: center;
   bottom: 10px;
-  right: 10px;
+  left: 10px;
   z-index: 1000;
   padding: 1rem;
   border: none;
